--- a/Paytm_integration_test/src/main/resources/templates/home.html
+++ b/Paytm_integration_test/src/main/resources/templates/home.html
@@ -55,8 +55,67 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 <script>
-    function startPayment(){
+
+    //Initiate client module func
+    function initiateClientModule(data) {
+
+        const script=document.createElement("script");
+        script.src=`https://securegw-stage.paytm.in/merchantpgpui/checkoutjs/merchants/RHLBnF07039627707073.js`;
+        script.crossOrigin = `anonymous`;
+        script.onload = () => {
+            var config = {
+                "root": "",
+                "flow": "DEFAULT",
+                "data": {
+                    "orderId": data.orderId, /* update order id */
+                    "token": data.body.txnToken, /* update token value */
+                    "tokenType": "TXN_TOKEN",
+                    "amount": data.amount /* update amount */
+                },
+
+                "merchant":{
+                    mid:"RHLBnF07039627707073"
+                },
+
+                "handler": {
+                    "notifyMerchant": function(eventName,data){
+                        console.log("notifyMerchant handler function called");
+                        console.log("eventName => ",eventName);
+                        console.log("data => ",data);
+                    }
+                }
+
+        }
+
+        document.body.appendChild(script);
+    }
+
+    //Start function
+    async function startPayment(){
         //call api to start payment
+        const amount = document.querySelector("#user_amount").value
+
+        const baseUrl = "http://localhost:8080"
+
+        const response = await fetch(`${baseUrl}/payment/start`,{
+            method:'POST',
+            headers:{
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({'amount': amount})
+        })
+
+
+
+        response.json().then(data=> {
+            console.log(data)
+
+            initiateClientModule(data)
+
+        }).catch(error=>{
+            console.log(error)
+            alert("Error in initiating payment")
+        })
 
     }
 </script>
